tests/rosetta/out/Rust/averages-mode.error
rustc error: exit status 1
error[E0308]: mismatched types
 --> /tmp/TestMochiToRustaverages-mode759779858/001/prog.rs:9:109
  |
9 |     let mut counts1: std::collections::HashMap<i32, i32> = { let mut m = std::collections::BTreeMap::new(); m };
  |                                                                                                             ^ expected `HashMap<i32, i32>`, found `BTreeMap<_, _>`
  |
  = note: expected struct `HashMap<i32, i32>`
             found struct `BTreeMap<_, _>`

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/TestMochiToRustaverages-mode759779858/001/prog.rs:41:27
   |
41 |     println!("{}", modes1.to_string());
   |                           ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustaverages-mode759779858/001/prog.rs:43:109
   |
43 |     let mut counts2: std::collections::HashMap<i32, i32> = { let mut m = std::collections::BTreeMap::new(); m };
   |                                                                                                             ^ expected `HashMap<i32, i32>`, found `BTreeMap<_, _>`
   |
   = note: expected struct `HashMap<i32, i32>`
              found struct `BTreeMap<_, _>`

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/TestMochiToRustaverages-mode759779858/001/prog.rs:75:27
   |
75 |     println!("{}", modes2.to_string());
   |                           ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
